MDEV-17666 sql_mode=ORACLE: Keyword ELSEIF should not be reserved