sql/gen_lex_token.cc
@@ -258,7 +258,8 @@ void compute_tokens()
   set_start_expr_token(RETURN_MARIADB_SYM);
   set_start_expr_token(RETURN_ORACLE_SYM);
   set_start_expr_token(IF_SYM);
-  set_start_expr_token(ELSEIF_SYM);
+  set_start_expr_token(ELSEIF_MARIADB_SYM);
+  set_start_expr_token(ELSEIF_ORACLE_SYM);
   set_start_expr_token(CASE_SYM);
   set_start_expr_token(WHEN_SYM);
   set_start_expr_token(WHILE_SYM);
